# newsletter-archiver

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/newsletter_archiver/: __init__.py  __main__.py
src/newsletter_archiver/cli/: main.py
src/newsletter_archiver/cli/commands/: archive.py  config.py  fetch.py  index.py  review.py  search.py  senders.py
src/newsletter_archiver/core/: config.py  database.py  exceptions.py
src/newsletter_archiver/fetcher/: content_extractor.py  email_parser.py  graph_client.py
src/newsletter_archiver/search/: chunker.py  fts.py  indexer.py  rag.py  vector.py
src/newsletter_archiver/storage/: db_manager.py  file_manager.py
tests/: conftest.py  test_content_extractor.py  test_email_parser.py  test_fetch_routing.py  test_graph_client.py  test_storage.py
